--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "better-npm-run": "0.0.9",
+    "bootstrap": "4.0.0-alpha.2",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
     "d3": "^4.2.1",
@@ -139,6 +140,7 @@
     "eslint": "^3.0.1",
     "eslint-config-standard": "^5.1.0",
     "eslint-config-standard-react": "^3.0.0",
+    "eslint-loader": "^1.5.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.0.0",
